Rename share to publ Bypass firefox's tracking protection since this isn't actually a share button

--- a/styles/extras.css
+++ b/styles/extras.css
@@ -8,7 +8,7 @@
 .ic-plus::after {
   content: " 🞥";
 }
-.ic-share::after {
+.ic-publ::after {
 	display: inline-block;
 	background-image: url(../icon/publish.svg);
 	background-size: contain;
